内容大修改

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -25,3 +25,10 @@
     height: 178px;
     display: block;
   }
+  .ql-editor{
+    height: 300px;
+  }
+  .ql-toolbar.ql-snow{
+    padding: 0 10px;
+  }
+
